# fossic

./: .cibuildwheel.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  README.md  SECURITY.md  TECH_DEBT.md  VERSIONS.md  napi.config.json  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-validation.yml  ci.yml  publish.yml  release-crates.yml  release.yml
benchmarks/: aggregate_volume_bench.py  baseline.json  sqlite_wal_contention.py
cleanup/: 01-inventory.md  02-history-draft.md  03-restructure-plan.md  04-verification.md
crates/fossic-similarity-hnsw/: Cargo.toml  README.md
crates/fossic-similarity-hnsw/src/: config.rs  error.rs  lib.rs  provider.rs
crates/fossic-similarity-hnsw/tests/: integration.rs
crates/fossic-tauri/: Cargo.toml  README.md
docs/: FOSSIC_CONSUMER_PROFILES.md  SUBSTRATE_EXTENSION_PATTERNS.md  TECH_DEBT.md  architecture.md  book.toml  gotchas.md  history.md  operating.md  repo-doc-cleanup-master.md
docs/adjacent-project-info/: cerebra_to_fossic_phase4a_ack_of_ack.md  fossic-interview.md  fossic_to_cerebra_phase10_ack.md  fossic_to_cerebra_phase4_query.md  fossic_to_cerebra_phase4a_ack.md  fossic_to_lattica_cerebra_phase10_routing_ack.md  lattica_to_fossic_round1_relay.md
docs/adr/: ADR-001-lattica-extends-lumaweave.md  ADR-002-es-toolkit-over-nats.md  ADR-003-eval-core-standalone.md  ADR-004-policy-scout-governance-scope.md  ADR-005-cerebra-api-surface.md  ADR-006-monorepo-structure.md  ADR-008-phase-12-research-exploration.md
docs/agent/: CHANGELOG_CONTRACT.md  DISCORD_PROTOCOL.md
docs/aseptic/: ADR_FORMAT.md  AGENT_BRIEFING.md  BLAST_RADIUS.md  CROSS_POLLINATION.md  DEVIATION.md  PASS_REPORTING.md  POLISH_DEBT.md  README.md  TECH_DEBT.md  VERSION_CONVENTION.md
docs/deep-dives/: branches.md  event-lifecycle.md  python-bindings.md  storage-schema-concurrency.md  subscriptions-wal-watch.md
docs/src/: SUMMARY.md  (+1 more)
fossic-node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
fossic-node/__test__/: append-read.spec.ts  bounded.spec.ts  branches.spec.ts  cross-stream.spec.ts  helpers.ts  lifecycle.spec.ts  reducers.spec.ts  subscriptions.spec.ts
fossic-node/src/: iters.rs  lib.rs  store.rs  subscriptions.rs  types.rs
fossic-py/: Cargo.toml  README.md  pyproject.toml
fossic-py/python/fossic/: __init__.py  _worker.py  relay.py  similarity.py
fossic-py/src/: cce.rs  errors.rs  lib.rs  similarity.rs  store.rs  subscriptions.rs  types.rs
fossic-py/tests/: test_append_read.py  test_bounded.py  test_branches.py  test_cce_vectors.py  test_cross_stream.py  test_deletion.py  test_event_id.py  test_lifecycle.py  test_read_batch.py  test_reducers.py  test_relay.py  test_similarity.py  test_subscriptions.py  test_transforms.py  test_upcasters.py
scripts/: build-napi.sh  build-wheels.sh  consumer-profile-test.sh  verify-attestation.sh
src/: append.rs  branches.rs  cce.rs  cross_stream.rs  cursors.rs  deletion.rs  error.rs  executor.rs  glob.rs  lib.rs  read.rs  reducers.rs  registry.rs  schema.rs  similarity.rs  snapshots.rs  store.rs  stream.rs  subscriptions.rs  system_stream.rs  transforms.rs  types.rs  upcasters.rs  wal_watch.rs
tests/: aggregate_bounded.rs  append_if.rs  bounded_foundation.rs  bounded_reads.rs  branches.rs  causation_bounded.rs  cce_vectors.rs  cross_stream.rs  cursors.rs  deletion.rs  dyn_reducers.rs  executor.rs  glob.rs  integration.rs  read_batch.rs  read_pool.rs  reducers.rs  registry.rs  similarity.rs  snapshot_policy.rs  snapshots.rs  streaming_iters.rs  subscriptions.rs  transforms.rs  upcasters.rs  wal_watch.rs
(+81 files in other folders)
