[package]
name = "fossic-node"
version = "1.8.3"
edition = "2021"
description = "napi-rs Node.js bindings for fossic"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
fossic            = { workspace = true }
napi              = { version = "3", features = ["napi6", "async", "serde-json"] }
napi-derive       = { version = "3", features = ["type-def"] }
crossbeam-channel = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { version = "1", features = ["rt", "macros"] }
shellexpand       = "3"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = { workspace = true }
