[package]
name = "fossic-py"
version = "1.8.3"
edition = "2021"
description = "Python bindings for the fossic event sourcing library"
license = "Apache-2.0"
publish = false

[lib]
name = "_fossic"
crate-type = ["cdylib"]

[dependencies]
fossic                 = { workspace = true, version = "1.8.3" }
fossic-similarity-hnsw = { workspace = true, version = "1.8.3" }
pyo3                   = { version = "0.29", features = ["extension-module"] }
crossbeam-channel = { workspace = true }
serde_json        = { workspace = true }
rmp-serde         = { workspace = true }
shellexpand       = "3"
