[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fossic"
version = "1.8.2"
description = "Local-first event sourcing with content-addressed event identity"
authors = [{name = "Ryan Johnson"}]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/bitmosh/fossic"
Author = "https://github.com/bitmosh"

[tool.maturin]
python-source = "python"
module-name = "fossic._fossic"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
