[package]
name = "fossic-similarity-hnsw"
version = "1.8.3"
edition = "2021"
description = "HNSW-backed SimilaritySearchProvider for fossic"
license = "Apache-2.0"
repository = "https://github.com/bitmosh/fossic"
readme = "README.md"
keywords = ["event-sourcing", "similarity", "hnsw", "vector-search"]
categories = ["algorithms", "data-structures"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
fossic       = { workspace = true, version = "1.8.3" }
hnsw_rs      = "0.3"
parking_lot  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rmp-serde    = { workspace = true }
thiserror    = "2"

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration.rs"
